feat: added articles

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,15 +6,4 @@ date: 2021-09-16
 
 # Justin Shaw
 
-Hey, I'm a Junior studying Computer Science at the University of Washington. For work, I am a teaching assistant for CSE 14x, the introductory programing series, and I work part-time as a Software Engineer at Capital Prawn. I suffer from a severe addiction to coffee and I am a huge fan of the Seattle Seahawks.
-
-
----
-
-<div>
-  Twitter [@notjustinshaw](https://twitter.com/notjustinshaw)
-  <br />
-  GitHub [@notjustinshaw](https://github.com/notjustinshaw)
-  <br />
-  Email brobeans@washington.edu
-</div>
+Hey, I'm a Junior studying Computer Science at the University of Washington. For work, I am a teaching assistant for CSE 14x, the introductory programing series, and I work part-time as a Software Engineer at Capital Prawn.
