--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,9 +1,22 @@
 ---
 type: page
-title: About
-date: 2021-09-16
+title: Home
+date: 2022-12-24
 ---
 
-# Justin Shaw
+# Søren Rood
 
-Hey, I'm a Junior studying Computer Science at the University of Washington. For work, I am a teaching assistant for CSE 14x, the introductory programing series, and I work part-time as a Software Engineer at Capital Prawn.
+I am a product manager at <a href="https://www.Replit.com" target="_blank">Replit</a> currently working on the core development experience. I've also worked on <a href="https://blog.replit.com/replit-famous" target="_blank">social</a>, <a href="https://blog.replit.com/ghostwriter" target="_blank">Ghostwriter</a>, <a href="https://blog.replit.com/bounties" target="_blank">Bounties</a>, and more.
+
+Before Replit, I was a software engineer where I built liquidity products (market makers) for various brokerages.
+
+---
+
+You can find me on:
+- <a href="https://twitter.com/roodsoren" target="_blank">Twitter</a> (DMs open)
+- <a href="https://replit.com/@soren" target="_blank">Replit</a>
+- <a href="https://linkedin.com/in/sorenrood" target="_blank">LinkedIn</a>
+- <a href="https://github.com/sorenrood" target="_blank">Github</a>
+- Discord: soren#1111
+
+
